--- a/app/templates/includes/header/top-panel.twig
+++ b/app/templates/includes/header/top-panel.twig
@@ -18,7 +18,9 @@
 					<li><a href="#">Переработка</a></li>
 					<li><a href="#">Контакты</a></li>
 				</ul>
-				<a href="#" class="close-btn js__toggle-mobile-left-menu uk-hidden@m" uk-toggle="target: #offcanvas-menu"></a>
+				<a href="#" class="close-btn js__toggle-mobile-left-menu uk-hidden@m" uk-toggle="target: #offcanvas-menu">
+					<span></span>
+				</a>
 			</div>
 		</div>
 
