--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -13,6 +13,12 @@
 		flyBox: {
 			isset: true,
 			img: 'img/media/egg-box-1.png'
+		},
+		video: {
+			url: {
+				mp4: 'img/media/video-test.mp4',
+				webm: 'img/media/video-test.webm'
+			}
 		}
 	} 
 %}
