--- a/app/sass/content/main-banner.scss
+++ b/app/sass/content/main-banner.scss
@@ -15,6 +15,15 @@
 			@include object-fit;
 		}
 	}
+	video {
+		position: absolute;
+		top: 0;
+		left: 50%;
+		width: 100%;
+		height: 100%;
+		transform: translateX(-50%);
+		@include object-fit;
+	}
 	@media (min-width: $tablet-w) {
 		margin-bottom: 120px;
 	};
