--- a/app/sass/content/recipes-list.scss
+++ b/app/sass/content/recipes-list.scss
@@ -41,6 +41,23 @@
 				bottom: -48px;
 				background-image: url(../img/ui/wave-bottom.png);
     	}
+    	a {
+    		position: relative;
+    		&:before {
+			    content: '';
+			    position: absolute;
+			    top: 0;
+			    left: 0;
+			    display: block;
+			    width: 100%;
+			    height: 100%;
+			    background-color: #faf4ef;
+			    z-index: -1;
+    		}
+    		img {
+    			mix-blend-mode: multiply;
+    		}
+    	}
 		}
 		&__inner {
 			max-width: 960px;
@@ -55,6 +72,9 @@
 	.recipe-img {
 		margin-bottom: 30px;
 		text-align: center;
+		a {
+			display: block;
+		}
 		img {
 			display: inline;
 		}
