--- a/app/sass/global/components.scss
+++ b/app/sass/global/components.scss
@@ -170,8 +170,18 @@
 .close-btn {
 	position: relative;
 	display: block;
-	width: 24px;
-	height: 24px;
+	width: 30px;
+	height: 30px;
+	span {
+		position: absolute;
+		width: 30px;
+		height: 2px;
+		top: 50%;
+		left: 0;
+		transform: translateY(-50%);
+		background: $tColor;
+		transition: opacity .2s linear;
+	}
 	&:after,&:before {
 		content: '';
 		position: absolute;
@@ -190,6 +200,9 @@
 		bottom: 8px;
 	}
 	&.active {
+		span {
+			opacity: 0;
+		}
 		&:before {
 			/* transform-origin: center; */
 			transform: rotate(-45deg) translateY(-50%);
