--- a/app/sass/content/tabs.scss
+++ b/app/sass/content/tabs.scss
@@ -1,4 +1,3 @@
-
 /*______ Tabs ______*/
 
 .tab-sw {
@@ -15,11 +14,11 @@
 		@media (min-width: $mob-s) {
 			width: 30%;
 			margin: 0 5px;
-		};
+		}
 		@media (min-width: $tablet-w) {
 			width: auto;
 			margin: 0 15px;
-		};
+		}
 		a {
 			position: relative;
 			padding: 0 1.25em;
@@ -32,35 +31,35 @@
 			text-transform: uppercase;
 			border: 2px solid $salat;
 			color: $tColor;
-			letter-spacing: .8px;
+			letter-spacing: 0.8px;
 			font-weight: bold;
-			transition: background-color .3s, color .3s ease;
+			transition: background-color 0.3s, color 0.3s ease;
 			@media (min-width: $mob-xs) {
 				font-size: 14px;
 			}
 			@media (min-width: $mob-s) {
 				font-size: 12px;
 				height: 50px;
-			};
+			}
 			@media (min-width: $tablet-w) {
 				padding: 0 2.25em;
 				font-size: 16px;
 				height: 60px;
-			};
+			}
 			@media (min-width: $desk-w) {
 				padding: 0 3.25em;
-			};
+			}
 			&:after {
-				content: '';
+				content: "";
 				position: absolute;
 				left: 50%;
 				bottom: -9px;
 				width: 15px;
 				height: 7.5px;
 				transform: translateX(-50%);
-				background: url('../img/icon-svg/triangle-down.svg') center 0 no-repeat;
+				background: url("../img/icon-svg/triangle-down.svg") center 0 no-repeat;
 				opacity: 0;
-				transition: opacity .3s ease;
+				transition: opacity 0.3s ease;
 			}
 		}
 		&.uk-active {
@@ -89,16 +88,16 @@
 	}
 }
 
-.custom-tabs{
+.custom-tabs {
 	position: relative;
 	z-index: 20;
 	&.all-brands {
 		.uk-switcher {
-			padding-top: 40px;
+			padding-top: 15px;
 			li {
 				@media (min-width: $tablet-w) {
 					min-height: 550px;
-				};
+				}
 				&.uk-active {
 					display: flex;
 					align-items: center;
@@ -114,10 +113,9 @@
 		padding-top: 40px;
 		@media (min-width: $desk-w) {
 			padding-top: 95px;
-		};
+		}
 	}
 }
-
 
 .map {
 	margin: 0 auto;
@@ -149,7 +147,7 @@
 		}
 		@media (min-width: $mob-s) {
 			top: 180px;
-		};
+		}
 	}
 }
 
@@ -176,7 +174,6 @@
 		}
 	}
 }
-
 
 .timer-tabs {
 	li {
