--- a/app/sass/global/typography.scss
+++ b/app/sass/global/typography.scss
@@ -53,3 +53,23 @@ p {
 	font-size: 18px;
 	line-height: 26px;
 }
+
+.content-section {
+	ul:not([class]),
+	ol:not([class])  {
+	    font-size: 18px;
+	    line-height: 26px;
+			li {
+				margin-bottom: 5px;
+			}
+	}
+
+	ul:not([class]) {
+		padding-left: 25px;
+	}
+
+	ol:not([class]) {
+	    padding-left: 20px;
+	}
+}
+
