--- a/app/sass/forms/forms.scss
+++ b/app/sass/forms/forms.scss
@@ -157,6 +157,20 @@
 	};
 }
 
+.file-remove {
+	width: 20px;
+	height: 20px;
+	background: url('../img/ui/close.svg') center no-repeat;
+	background-size: 10px;
+	position: absolute;
+	top: 16px;
+	right: -20px;
+	display: none;
+	&.visible {
+		display: block;
+	}
+}
+
 .contact-form-success {	
 	font-size: 30px;
 	line-height: 36px;
